# amplifier-paperclip-adapter

./: .gitignore  README.md  install.sh  protocol.md
adapter/: package-lock.json  package.json  tsconfig.json
adapter/src/: index.ts
adapter/src/cli/: format-event.ts  index.ts
adapter/src/server/: execute.ts  index.ts  parse.ts  test.ts
adapter/src/ui/: index.ts  parse-stdout.ts
adapter/tests/: execute.test.ts  format-event.test.ts  index.test.ts  parse-stdout.test.ts  parse.test.ts  setup.ts  smoke.test.ts  test-env.test.ts
adapter/tests/server/: index.test.ts
bridge/: pyproject.toml
bridge/src/amplifier_paperclip_bridge/: __init__.py  approval.py  main.py  output.py
bridge/tests/: conftest.py  test_approval.py  test_integration.py  test_main.py  test_output.py  test_package.py  test_protocol_spec.py
docs/: design.md
docs/plans/: phase-1-python-bridge.md  phase-2-typescript-adapter.md
tests/: test_install_sh.sh
