[project]
name = "amplifier-paperclip-bridge"
version = "0.1.0"
description = "Python bridge connecting Amplifier sessions to Paperclip heartbeats via JSONL"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ben Krabach" },
]
dependencies = [
    "amplifier-core>=1.0.7",
    "amplifier-foundation @ git+https://github.com/microsoft/amplifier-foundation.git",
]

[project.scripts]
amplifier-paperclip-bridge = "amplifier_paperclip_bridge.main:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_paperclip_bridge"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
